--- a/revival/templates/revival/profile_tag_list.html
+++ b/revival/templates/revival/profile_tag_list.html
@@ -36,7 +36,7 @@
                 </form>
                 {% url change_object_url_name as change_classroom_url %}
                 <a href="{{ change_classroom_url }}" class="btn btn-sm btn-success cta pull-right action"
-                        title="{% trans "Add new classroom" %}">
+                        title="{% trans "Add new profile" %}">
                     <i class="glyphicon glyphicon-plus"></i>
                     <span class="hidden-xs">{% trans "Add" %}</span>
                 </a>
