--- a/revival/templates/revival/change_profile_tag.html
+++ b/revival/templates/revival/change_profile_tag.html
@@ -138,7 +138,8 @@
                     </div>
                     <div class="form-group">
                         <label for="hour-of-sending">{% trans "Hour of sending" %}</label>
-                        <input type="number" id="hour-of-sending" min="0" max="23" value="9"
+                        <input type="number" id="hour-of-sending" min="0" max="23"
+                               value="{% if revival.hour_of_sending %}{{ revival.hour_of_sending }}{% else %}9{% endif %}"
                                name="hour_of_sending" class="form-control input-sm frequency" />
                     </div>
                     <div class="form-group">
