Bug fix: Social sharing URLs in #modal-join-notice correctly set after a join through AJAX call

--- a/accesscontrol/templates/accesscontrol/snippets/request_management.html
+++ b/accesscontrol/templates/accesscontrol/snippets/request_management.html
@@ -107,8 +107,8 @@
                     $('div#modal-join-notice .project-name').text(data.project_name);
                     $('#modal-join-notice').modal('show').find('.claim').attr('href', data.ikwen_page);
                     $('#modal-join-notice .fb-link').attr('href', 'https://facebook.com/sharer/sharer.php?u=' + data.ikwen_page);
-                    $('#modal-join-notice .twtr-link').attr('href', 'https://facebook.com/sharer/sharer.php?u=' + data.ikwen_page);
-                    $('.wsap-link').data('url', 'https://facebook.com/sharer/sharer.php?u=' + data.ikwen_page);
+                    $('#modal-join-notice .twtr-link').attr('href', 'https://twitter.com/home?status=' + data.ikwen_page);
+                    $('.wsap-link').data('url', data.ikwen_page);
                 }
             })
         });
