--- a/templates/500.html
+++ b/templates/500.html
@@ -1,30 +1,41 @@
-{% load i18n staticfiles auth_tokens %}
-<!DOCTYPE html>
-<html lang="{{ lang }}">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Error 500 - ikwen</title>
-        <link rel='stylesheet' href="{% static 'ikwen/font-awesome/css/font-awesome.min.css' %}" />
-        <link rel='stylesheet' href="{% static 'ikwen/css/flatly.bootstrap.min.css' %}" />
-        <link rel='stylesheet' href="{% static 'ikwen/css/base.css' %}" />
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-          <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
-    </head>
-    <body class="error-page">
-        <div id="content" class="container">
-            <h1>Error 500</h1>
-            <p>Internal Server error.</p>
-            <p>Please try again later or contact administrator.</p>
+{% extends "core/base_bs.html" %}
+{% load i18n static %}
+{% block meta %}
+    {% include 'core/snippets/favicon.html' %}
+    <meta property="description" content="{{ config.short_description }}" />
+    <meta property="og:title" content="{{ service.project_name }}" />
+    <meta property="og:image" content="{% get_media_prefix %}{{ config.logo.name }}" />
+    <meta property="og:description" content="{{ config.short_description }}" />
+    <meta property="og:url" content="{{ service.url }}" />
+    <meta property="og:site_name" content="{{ service.domain|upper }}" />
+{% endblock %}
+{% block page_title %}<title>Error 500 - ikwen </title>{% endblock %}
+{% block head_style %}
+    {{ block.super }}
+    <style type="text/css">
+        #navbar {display: none}
+    </style>
+{% endblock %}
+
+{% block content %}
+    <div id="content" class="container">
+        <div style="margin:9% 5% 0; text-align: center;">
+            <div style="padding-top: 20px; text-align: center;">
+                <img src="{% static 'ikwen/img/embarassed.jpg' %}" height="200"/>
+                <h2 style="font-size: 45px;">Oops !!!!</h2>
+                <p style="color: #888; font-weight: 300;padding-top:12px;font-size:21px"> {% trans "Something went wrong ..." %} </p>
+                <a class="btn btn-primary" href="/" style="font-size: 18px;margin-top: 15px;min-width:200px">
+                    {% trans "Let's try again" %}
+                </a>
+            </div>
+
         </div>
-        <footer style="font-size: 12px; margin-top: 45px; text-align: center">
+    </div>
+{% endblock %}
+
+{% block footer %}
+     <footer style="font-size: 12px; margin-top: 45px; text-align: center">
             &copy; {{ year }} <a class="company-name" href="{{ settings.IKWEN_BASE_URL }}"><strong>ikwen</strong></a>.
             {% trans "All rights reserved." %}
-        </footer>
-    </body>
-</html>
+     </footer>
+{% endblock %}
