Integration of SupportCode

--- a/core/templates/core/service_detail.html
+++ b/core/templates/core/service_detail.html
@@ -53,11 +53,16 @@
                         <div>
                             <label class="col-sm-3">{% trans "Support Code" %}</label>
                             <span>
+                            {% if support_code %}
                                 {{ support_code.token }}
                                 {% if support_code.expired %}
                                      <span class="label label-danger">{% trans "Expired" %}</span>
                                     &nbsp;&nbsp; - &nbsp;&nbsp;&nbsp;<a href="#">{% trans "Renew" %}</a>
                                 {% endif %}
+                            {% else %}
+                                <span class="label label-danger">{% trans "No code" %}</span>
+                                &nbsp;&nbsp; - &nbsp;&nbsp;&nbsp;<a href="#">{% trans "Get it now" %}</a>
+                            {% endif %}
                             </span>
                         </div>
                         <div>
