--- a/core/templates/core/snippets/uploader_single.html
+++ b/core/templates/core/snippets/uploader_single.html
@@ -1,7 +1,7 @@
 {% load i18n humanize static auth_tokens %}
 
 <section class="photos" style="width: 100%">
-    <label class="required upload-title" style="float: left; width: 100%">{% trans "Upload image" %}</label>
+    <label class="required upload-title" style="float: left; width: 100%">{% blocktrans %}Upload {{ image_field_name }}{% endblocktrans %}</label>
     <div id="upload-container{{ img_counter }}" class="upload-container">
         {% if image.name %}
         <div class="image" style="background-image: url('{{ image.url }}')">
