--- a/core/templates/core/change_object_base.html
+++ b/core/templates/core/change_object_base.html
@@ -11,6 +11,7 @@
 {% endblock %}
 
 {% block head_js %}
+    {{ block.super }}
     <script src="{% static 'ikwen/ajaxuploader/js/fileuploader.js' %}"></script>
 {% endblock %}
 
