Minor fix: $('drag-sort').sortable( ... changed to $('object-list').sortable(

--- a/core/templates/core/snippets/sort_and_actions.html
+++ b/core/templates/core/snippets/sort_and_actions.html
@@ -1,6 +1,6 @@
 <script>
     (function() {
-        $(".drag-sort").sortable({
+        $(".object-list").sortable({
             placeholder: "sortable-placeholder",
             forcePlaceholderSize: true,
             update: function (event, ui) {
