--- a/static/ikwen/css/transaction-log.css
+++ b/static/ikwen/css/transaction-log.css
@@ -34,6 +34,10 @@
     .row.summary .col-xs-6:nth-child(2n+1) {padding-right: 8px}
 }
 
+@media (min-width: 768px) {
+    form#criteria .form-group {padding-right: 0}
+}
+
 @media (min-width: 1200px) {
     .category .amount {font-size: 30px}
 }
