--- a/static/ikwen/css/console.css
+++ b/static/ikwen/css/console.css
@@ -106,7 +106,7 @@
     margin-top: 30px;
 }
 #stage .card h4 a.more {color: #0069c3;float: right;font-size: 13px}
-#stage .card .event-media {background-size: cover;float: left;height: 320px;margin: 1em 0;width: 100%;}
+#stage .card .event-media {background-size: cover;background-position: center;float: left;height: 320px;margin: 1em 0;width: 100%;}
 
 #stage .card .content {
     margin-top: 15px
