--- a/static/ikwen/css/uploader-single.css
+++ b/static/ikwen/css/uploader-single.css
@@ -7,8 +7,8 @@
         This means a larger image and the upload button is bigger and more visible
 */
 
-#upload-container, .upload-container { float: left; margin-top: 3px; width: 74% }
-#upload-container .image, .upload-container .image {background: url('../img/no_photo.png') no-repeat center; background-size: 100%; border: solid 1px #DBE6FF; height: 225px; float: left; margin: 5px; overflow: hidden; width: 280px}
+#upload-container, .upload-container {float: left;/* margin: 3px 0 5px 0; */width: 74%;}
+#upload-container .image, .upload-container .image {background: url('../img/no_photo.png') no-repeat center;background-size: 100%;border: solid 1px #DBE6FF;height: 225px;float: left;overflow: hidden;width: 280px;}
 #upload-container .image .progress, .upload-container .image .progress {float: left; background: #3C63FF; height: 10px; margin-top: 213px}
 #upload-container .image .spinner, .upload-container .image .spinner {margin-top: 90px}
 #upload-container .uploader, .upload-container .uploader {display: none; height: 225px; position: absolute; text-align: center; width: 280px}
