".ik-li a" out of .actions keeps href attribute if the .ik-li does not contain any .actions block

--- a/core/templates/core/base_admin.html
+++ b/core/templates/core/base_admin.html
@@ -142,6 +142,7 @@
             });
             if ($(window).width() < 768)
                 $('.tiles .ik-li a').each(function() {
+                    if ($(this).parents('.ik-li').find('.actions').length === 0) return;
                     if ($(this).parents('.actions').length === 0) $(this).removeAttr('href');
                 });
             $('body').on('click', '.ik-li', function() {
