--- a/billing/templates/billing/transaction_log.html
+++ b/billing/templates/billing/transaction_log.html
@@ -3,7 +3,7 @@
 {% load i18n humanize static auth_tokens %}
 
 {% block page_title %}
-<title>{% trans "Transaction log" %} - {{ service.project_name }}</title>
+<title>{% trans "Transactions log" %} - {{ service.project_name }}</title>
 {% endblock %}
 
 {% block head_style %}
