--- a/static/ikwen/css/transaction-log.css
+++ b/static/ikwen/css/transaction-log.css
@@ -24,7 +24,7 @@
 }
 
 @media (max-width: 1199px) {
-    .category h4 {font-size: 17px}
+    .category h4 {font-size: 16px;}
 }
 
 @media (max-width: 767px) {
