--- a/core/templates/core/snippets/admin_tools.html
+++ b/core/templates/core/snippets/admin_tools.html
@@ -2,43 +2,57 @@
 <div id="admin-tools">
     <form id="admin-tools-form">
         <div>
-            <i class="glyphicon glyphicon-search"></i>
-            <i class="glyphicon glyphicon-menu-left hide-search back"></i>
-            <input id="context-search" type="text" placeholder="{% trans "Search" %}" value="{% if q %}{{ q }}{% endif %}"
-                   class="input-sm tool search" data-min-search-chars="2"/>
-        </div>
-        {% if filter %}
-        <div class="filter-trigger">
-            <i class="glyphicon glyphicon-filter"></i>
-            <i class="glyphicon glyphicon-menu-left hide-filter back"></i>
-            {% if filter|length == 1 %}
-                <div class="tool filter">
-                    <label for="order-status" class="sr-only"></label>
-                    <select id="order-status" style="float: left; width: 120px" class="form-control input-sm status widget" name="status">
-                        {% for choice in filter.0.choices %}
-                            <option value="{{ choice.0 }}">{{ choice.1|capfirst }}</option>
-                        {% endfor %}
-                        <option value="">{% trans "All" %}</option>
-                    </select>
-                </div>
-            {% else %}
-                <div class="show-results-filter tool filter btn btn-default btn-sm{% if filter_results %} active{% endif %}">
-                    <div>
-                        <span class="pull-left">{% trans "Filters" %}</span>
-                        <span class="caret pull-right" style="margin: 7px 0 0 5px"></span>
-                    </div>
+            <div>
+                <i class="glyphicon glyphicon-search"></i>
+                <i class="glyphicon glyphicon-menu-left hide-search back"></i>
+                <input id="context-search" type="text" placeholder="{% trans "Search" %}" value="{% if q %}{{ q }}{% endif %}"
+                       class="input-sm tool search" data-min-search-chars="2"/>
+            </div>
+            {% if filter and filter|length > 0 %}
+                <div class="filter-trigger">
+                    <i class="glyphicon glyphicon-filter"></i>
+                    <i class="glyphicon glyphicon-menu-left hide-filter back"></i>
+                    {% for elt in filter %}
+                        <div class="tool filter{% if elt.is_date_filter %} period{% endif %}">
+                            <label for="{{ elt.parameter_name }}" class="sr-only">{% trans elt.title %}</label>
+                            <select id="{{ elt.parameter_name }}" style="float: left; width: 120px;{% if forloop.counter > 1 %} padding-left: 10px{% endif %}"
+                                    class="form-control input-sm {{ elt.parameter_name }} widget" name="{{ elt.parameter_name }}">
+                                <option value="">{% trans "All" %} {% trans elt.title %}</option>
+                                {% for choice in elt.choices %}
+                                    <option value="{{ choice.0 }}">{{ choice.1 }}</option>
+                                {% endfor %}
+                                {% if elt.is_date_filter %}
+                                    <option value="other">{% trans "Other" %}</option>
+                                {% endif %}
+                            </select>
+                        </div>
+                    {% endfor %}
                 </div>
             {% endif %}
         </div>
-        <input type="hidden" id="filter-action" name="action" />
-        {% endif %}
     </form>
-    {% if show_export %}
-    <button class="btn btn-sm btn-success cta pull-right action export" style="border-color: #18bc9c"
-            data-toggle="modal" data-target="#load-product" title="{% trans "Export as Spreadsheet" %}">
-        <i class="glyphicon glyphicon-list-alt"></i>
-        <span class="hidden-xs">{% trans "Export" %}</span>
-    </button>
-    {% endif %}
+    <div id="admin-tools-actions">
+        {% url change_object_url_name as change_object_url %}
+        <a href="{{ change_object_url }}" class="btn btn-sm btn-success cta add pull-right action"
+                title="{% blocktrans %}Add new {{ verbose_name }}{% endblocktrans %}">
+            <i class="glyphicon glyphicon-plus"></i>
+            <span class="hidden-xs">{% trans "Add" %}</span>
+        </a>
+        {% if show_import %}
+            <button class="btn btn-sm btn-success cta pull-right action"
+               title="{% blocktrans %}Import {{ verbose_name }} list from CSV file{% endblocktrans %}"
+               style="margin-right: 5px" data-toggle="modal" data-target="#modal-import">
+                <i class="fa fa-file-import"></i>
+                <span class="hidden-xs">{% trans "Import" %}</span>
+            </button>
+        {% endif %}
+        {% if show_export %}
+        <button class="btn btn-sm btn-success cta pull-right action export"
+                data-toggle="modal" data-target="#load-product" title="{% trans "Export as Spreadsheet" %}">
+            <i class="fa fa-file-export"></i>
+            <span class="hidden-xs">{% trans "Export" %}</span>
+        </button>
+        {% endif %}
+    </div>
     <div class="clearfix"></div>
 </div>
