--- a/core/templates/core/console.html
+++ b/core/templates/core/console.html
@@ -176,7 +176,7 @@
                 <div>
                 {% for event in event_list %}
                     {% with service=event.service event_type=event.event_type %}
-                    <div id="{{ event.id }}" class="{{ service.project_name_slug }} card subtle-shade" data-base-url="{{ service.url }}">
+                    <div id="{{ event.id }}" class="{{ service.project_name_slug }} card subtle-shade" data-base-url="{{ service.go_url }}">
                         <h3>
                             {% if service.config.logo.name %}
                                 <img src="{{ service.config.logo.url }}" width="30" />
